# sae_lora

./: .gitattributes  .gitignore  CLAUDE.md  README.md  data.py  main.py  make_behavior_dataset.py  pyproject.toml  train.py  utils.py
data/datasets/balanced_dataset_programming/: dataset_info.json  state.json
datasets/helpsteer_modified/: cache-930c10ce25c496ee.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
loras/3daqzq/: params.pt
loras/f9yzge/: metadata.json  params.pt
loras/fn76en/: metadata.json  params.pt
loras/hflmx7/: params.pt
loras/sm401e/: metadata.json  params.pt
loras/tg3dns/: metadata.json  params.pt
loras/yuzzv7/: metadata.json  params.pt
