[project]
name = "sae_lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformer_lens",
    "torch",
    "ipykernel>=7.1.0",
    "sae-lens>=6.30.1",
    "ipywidgets>=8.1.8",
    "einops>=0.8.1",
    "tabulate>=0.9.0",
]
