[project]
name = "sae_lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "transformer_lens",
    "ipykernel>=7.1.0",
    "sae-lens>=6.30.1",
    "ipywidgets>=8.1.8",
    "einops>=0.8.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "ipython>=9.9.0",
    "torch>=2.10.0",
    "nbformat>=5.10.4",
    "aiohttp>=3.13.3",
]
